--- a/clara/package.json
+++ b/clara/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6"
   },
