--- a/clara/package.json
+++ b/clara/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
     "motion": "^12.11.0",
