--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "clsx": "^2.1.1",
     "firebase": "^11.7.1",
     "framer-motion": "^12.11.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.510.0",
     "motion": "^12.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6"
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
